Fix credentials wrapper alignment issues

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -112,8 +112,6 @@ header {
     overflow: hidden;
     transition: transform .5s ease, height .2s ease;
     z-index: 9999;
-    margin: 0 auto;
-    text-align: center;
 }
 
 .wrapper.active-popup {
@@ -133,22 +131,33 @@ header {
     align-items: center;
 }
 
+.wrapper .form-box form {
+    width: 100%;
+}
+
 .wrapper .form-box.login{
     position: absolute;
     transition: transform .18s ease;
     transform: translateX(0);
     width: 100%;
-}
-
-.wrapper.active .form-box.login {
-    transition: none;
-    transform: translateX(-400px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .wrapper .form-box.register{
     position: absolute;
     transition: transform .18s ease;
     transform: translateX(400px);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.wrapper.active .form-box.login {
+    transition: none;
+    transform: translateX(-400px);
 }
 
 .wrapper.active .form-box.register {
